--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </p>
             <h1 class="heading heading-dark wow rubberBand" data-aos="flip-left"> what i do</h1>
             <div class="row mt-5 wedo-box gx-2" data-aos="zoom-in">
-                <div class="col-md-4">
+                <div class="col-md-4" data-aos="zoom-in">
                     <h4>TEMPLATE.</h4>
                     <p>Lately, I often create templates for WordPress. The portfolio is the presentation and the opportunity to buy them on the site Themeforest.</p>
                 </div>
