--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <p class="wedo-text  text-center" data-aos="fade-up" data-aos-duration="2000">
                 I love the simplicity in the design of web sites. As I see it,people, it's like my work. Naturally do not want to rest on our laurels and will continue further studies to improve soybean skills, creating new interesting creative projects.
             </p>
-            <h1 class="heading heading-dark wow rubberBand" data-aos="flip-left"> what i do</h1>
+            <h1 class="heading heading-dark wow rubberBand" data-aos="flip-left"> what i do with my friend</h1>
             <div class="row mt-5 wedo-box gx-2" data-aos="zoom-in">
                 <div class="col-md-4" data-aos="zoom-in">
                     <h4>TEMPLATE.</h4>
